# tabacco_cards

./: README.md  extract_tables.py  main.py  pyproject.toml
img/: IMG_5545.HEIC  IMG_5547.HEIC
output/: IMG_5545.csv  IMG_5547.csv  tabelas_extraidas.csv
