[project]
name = "tabacco-cards"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.4.2",
    "opencv-python-headless>=4.13.0.92",
    "paddleocr>=3.4.0",
    "paddlepaddle>=3.3.0",
    "paddlex[ocr]>=3.4.2",
    "pandas>=3.0.1",
    "pillow>=12.1.1",
    "pillow-heif>=1.3.0",
    "rapidocr-onnxruntime>=1.4.4",
    "timm>=1.0.25",
    "torch>=2.10.0",
    "torchvision>=0.25.0",
    "transformers>=5.3.0",
]
